// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpandableList /> should render with a Item 1`] = `
<ExpandableList>
  <ul
    className="list"
  >
    <ExpandableListItem
      checked={false}
      expandable={true}
      expanded={false}
      header="Wheel of time"
      indetermined={false}
      onChange={[MockFunction]}
      padded={true}
      selectable={true}
      stayExpanded={false}
    >
      <li
        className="listItemPadding"
      >
        <div
          className="listItemContainer"
        >
          <Checkbox
            bsClass="checkbox"
            checked={false}
            disabled={false}
            inline={true}
            inputRef={[Function]}
            onChange={[MockFunction]}
            title=""
          >
            <label
              className="checkbox-inline"
              title=""
            >
              <input
                checked={false}
                disabled={false}
                onChange={[MockFunction]}
                type="checkbox"
              />
            </label>
          </Checkbox>
          <div
            className="expandBoxContainer"
          >
            <div
              className="fa-stack expandBox"
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <Icon
                className="fa-stack-1x iconBackground"
                name="circle"
              >
                <FontAwesomeIcon
                  border={false}
                  className="fa-stack-1x iconBackground"
                  fixedWidth={false}
                  flip={null}
                  icon="circle"
                  inverse={false}
                  listItem={false}
                  mask={null}
                  pull={null}
                  pulse={false}
                  rotation={null}
                  size={null}
                  spin={false}
                  swapOpacity={false}
                  symbol={false}
                  title=""
                  transform={null}
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-circle fa-w-16 fa-stack-1x iconBackground"
                    data-icon="circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </FontAwesomeIcon>
              </Icon>
              <Icon
                className="fa-stack-1x"
                name="angle-up"
              >
                <FontAwesomeIcon
                  border={false}
                  className="fa-stack-1x"
                  fixedWidth={false}
                  flip={null}
                  icon="angle-up"
                  inverse={false}
                  listItem={false}
                  mask={null}
                  pull={null}
                  pulse={false}
                  rotation={null}
                  size={null}
                  spin={false}
                  swapOpacity={false}
                  symbol={false}
                  title=""
                  transform={null}
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-angle-up fa-w-10 fa-stack-1x"
                    data-icon="angle-up"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </FontAwesomeIcon>
              </Icon>
            </div>
          </div>
          <span
            className="header"
          >
            <span
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              Wheel of time
            </span>
          </span>
        </div>
        <div
          className="expandableContent"
        />
      </li>
    </ExpandableListItem>
  </ul>
</ExpandableList>
`;

exports[`<ExpandableList /> should render with a nested ExpandableList 1`] = `
<ExpandableList>
  <ul
    className="list"
  >
    <ExpandableListItem
      checked={false}
      expandable={true}
      expanded={true}
      header="Wheel of time"
      indetermined={false}
      onChange={[MockFunction]}
      padded={true}
      selectable={true}
      stayExpanded={false}
    >
      <li
        className="listItemPadding"
      >
        <div
          className="listItemContainer"
        >
          <Checkbox
            bsClass="checkbox"
            checked={false}
            disabled={false}
            inline={true}
            inputRef={[Function]}
            onChange={[MockFunction]}
            title=""
          >
            <label
              className="checkbox-inline"
              title=""
            >
              <input
                checked={false}
                disabled={false}
                onChange={[MockFunction]}
                type="checkbox"
              />
            </label>
          </Checkbox>
          <div
            className="expandBoxContainer"
          >
            <div
              className="fa-stack expandBox"
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <Icon
                className="fa-stack-1x iconBackground"
                name="circle"
              >
                <FontAwesomeIcon
                  border={false}
                  className="fa-stack-1x iconBackground"
                  fixedWidth={false}
                  flip={null}
                  icon="circle"
                  inverse={false}
                  listItem={false}
                  mask={null}
                  pull={null}
                  pulse={false}
                  rotation={null}
                  size={null}
                  spin={false}
                  swapOpacity={false}
                  symbol={false}
                  title=""
                  transform={null}
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-circle fa-w-16 fa-stack-1x iconBackground"
                    data-icon="circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </FontAwesomeIcon>
              </Icon>
              <Icon
                className="fa-stack-1x"
                name="angle-down"
              >
                <FontAwesomeIcon
                  border={false}
                  className="fa-stack-1x"
                  fixedWidth={false}
                  flip={null}
                  icon="angle-down"
                  inverse={false}
                  listItem={false}
                  mask={null}
                  pull={null}
                  pulse={false}
                  rotation={null}
                  size={null}
                  spin={false}
                  swapOpacity={false}
                  symbol={false}
                  title=""
                  transform={null}
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-angle-down fa-w-10 fa-stack-1x"
                    data-icon="angle-down"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </FontAwesomeIcon>
              </Icon>
            </div>
          </div>
          <span
            className="header"
          >
            <span
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              Wheel of time
            </span>
          </span>
        </div>
        <div
          className="expandableContent"
        >
          <ExpandableList>
            <ul
              className="list"
            >
              <ExpandableListItem
                checked={false}
                expandable={true}
                expanded={false}
                header="Edmonds Field"
                indetermined={false}
                onChange={[MockFunction]}
                padded={true}
                selectable={true}
                stayExpanded={false}
              >
                <li
                  className="listItemPadding"
                >
                  <div
                    className="listItemContainer"
                  >
                    <Checkbox
                      bsClass="checkbox"
                      checked={false}
                      disabled={false}
                      inline={true}
                      inputRef={[Function]}
                      onChange={[MockFunction]}
                      title=""
                    >
                      <label
                        className="checkbox-inline"
                        title=""
                      >
                        <input
                          checked={false}
                          disabled={false}
                          onChange={[MockFunction]}
                          type="checkbox"
                        />
                      </label>
                    </Checkbox>
                    <div
                      className="expandBoxContainer"
                    >
                      <div
                        className="fa-stack expandBox"
                        onClick={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        <Icon
                          className="fa-stack-1x iconBackground"
                          name="circle"
                        >
                          <FontAwesomeIcon
                            border={false}
                            className="fa-stack-1x iconBackground"
                            fixedWidth={false}
                            flip={null}
                            icon="circle"
                            inverse={false}
                            listItem={false}
                            mask={null}
                            pull={null}
                            pulse={false}
                            rotation={null}
                            size={null}
                            spin={false}
                            swapOpacity={false}
                            symbol={false}
                            title=""
                            transform={null}
                          >
                            <svg
                              aria-hidden="true"
                              className="svg-inline--fa fa-circle fa-w-16 fa-stack-1x iconBackground"
                              data-icon="circle"
                              data-prefix="fas"
                              focusable="false"
                              role="img"
                              style={Object {}}
                              viewBox="0 0 512 512"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                                fill="currentColor"
                                style={Object {}}
                              />
                            </svg>
                          </FontAwesomeIcon>
                        </Icon>
                        <Icon
                          className="fa-stack-1x"
                          name="angle-up"
                        >
                          <FontAwesomeIcon
                            border={false}
                            className="fa-stack-1x"
                            fixedWidth={false}
                            flip={null}
                            icon="angle-up"
                            inverse={false}
                            listItem={false}
                            mask={null}
                            pull={null}
                            pulse={false}
                            rotation={null}
                            size={null}
                            spin={false}
                            swapOpacity={false}
                            symbol={false}
                            title=""
                            transform={null}
                          >
                            <svg
                              aria-hidden="true"
                              className="svg-inline--fa fa-angle-up fa-w-10 fa-stack-1x"
                              data-icon="angle-up"
                              data-prefix="fas"
                              focusable="false"
                              role="img"
                              style={Object {}}
                              viewBox="0 0 320 512"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z"
                                fill="currentColor"
                                style={Object {}}
                              />
                            </svg>
                          </FontAwesomeIcon>
                        </Icon>
                      </div>
                    </div>
                    <span
                      className="header"
                    >
                      <span
                        onClick={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        Edmonds Field
                      </span>
                    </span>
                  </div>
                  <div
                    className="expandableContent"
                  />
                </li>
              </ExpandableListItem>
            </ul>
          </ExpandableList>
        </div>
      </li>
    </ExpandableListItem>
  </ul>
</ExpandableList>
`;

exports[`<ExpandableList /> should render with no children 1`] = `
<ExpandableList>
  <ul
    className="list"
  />
</ExpandableList>
`;
